--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="#features" class="block text-gray-600 hover:text-indigo-600 py-2">Features</a>
             <a href="#platforms" class="block text-gray-600 hover:text-indigo-600 py-2">Platforms</a>
             <a href="#screenshots" class="block text-gray-600 hover:text-indigo-600 py-2">Screenshots</a>
-            <a href="download.html" class="block bg-indigo-600 text-white text-center mt-2 px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300">
+            <a href="https://edunest.me/EduNest-download-page/" class="block bg-indigo-600 text-white text-center mt-2 px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300">
                 Download App
             </a>
         </div>
@@ -69,7 +69,7 @@
                 <p class="text-lg md:text-xl max-w-3xl mx-auto mb-8 opacity-90">
                     A comprehensive educational app that transforms student learning with AI-powered practice tests, smart attendance tracking, and vast study resources.
                 </p>
-                <a href="download.html" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full text-lg hover:bg-gray-100 transition duration-300 shadow-lg transform hover:scale-105">
+                <a href="https://edunest.me/EduNest-download-page/" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full text-lg hover:bg-gray-100 transition duration-300 shadow-lg transform hover:scale-105">
                     Get Started Now
                 </a>
             </div>
