--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                     Empowering the next generation of learners through technology.
                 </p>
                 <div class="flex justify-center space-x-6 mt-6">
-                    <a href="https://github.com/Ranojitdas/Ranojitdas.github.io" target="_blank" class="hover:text-indigo-400">GitHub</a>
+                    <a href="https://github.com/Ranojitdas/" target="_blank" class="hover:text-indigo-400">GitHub</a>
                     <a href="#" class="hover:text-indigo-400">Twitter</a>
-                    <a href="#" class="hover:text-indigo-400">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/ranojit-das/" class="hover:text-indigo-400">LinkedIn</a>
                 </div>
             </div>
             <hr class="my-8 border-gray-700">
