--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
             </div>
             <hr class="my-8 border-gray-700">
             <div class="text-center text-gray-500">
+                 <!-- ADDED LEGAL LINKS HERE -->
+                <div class="flex justify-center space-x-4 mb-4">
+                    <a href="http://edunest.me/EduNest-Privacy-Policy/" class="hover:text-indigo-400 transition-colors">Privacy Policy</a>
+                    <span>•</span>
+                    <a href="http://edunest.me/EduNest-Terms-Condition/" class="hover:text-indigo-400 transition-colors">Terms & Conditions</a>
+                </div>
                 <p>&copy; 2025 EduNest. All rights reserved.</p>
                 <p class="mt-2">Made with ❤️ by Ranojit Das | Contact: <a href="mailto:ranojitdas362@gmail.com" class="hover:text-indigo-400 transition-colors">ranojitdas362@gmail.com</a></p>
             </div>
