--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
                 <a href="#platforms" class="text-gray-600 hover:text-indigo-600">Platforms</a>
                 <a href="#screenshots" class="text-gray-600 hover:text-indigo-600">Screenshots</a>
-                <a href="download.html" class="bg-indigo-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300 shadow-md">
+                <a href="https://edunest.me/EduNest-download-page/" class="bg-indigo-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-indigo-700 transition duration-300 shadow-md">
                     Download App
                 </a>
             </div>
